[package]
name = "cached_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.117"
log = "0.4.21"
lazy_static = "1.4.0"
